# mypyutils

./: .gitignore  README.md  __init__.py  _modelloaderlib.py  config.py  configclass.py  datawriter.py  docinit.py  modelloader.py  pyproject.toml  timer.py
docs/: README.md  conf.py  index.rst  requirements.txt
docs/_templates/: copyleft.html
docs/_templates/autoapi/python/: module.rst
modelloader/: __init__.py  messages.py  modelkey.py  modelloader.py  threads.py  util.py
