[project]
name = "mypyutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
docs = [
    "pydata-sphinx-theme",
    "Sphinx",
    "sphinx-autoapi",
    "sphinx-design",
    "sphinx-togglebutton",
]
modelloader = [
    "huggingface_hub",
    "transformers",
]
